--- a/assets/css/style_accueil.css
+++ b/assets/css/style_accueil.css
@@ -7,8 +7,12 @@ body {
 
 /* Contenu */
 
-.infobar {
+.col-6 {
     background-color: #231F20;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    text-align: center;
 }
 
 .text {
@@ -42,10 +46,12 @@ p{
 }
 
 #logo1 {
-    height: auto;
-    width: 14rem;
-    padding-left: 4rem;
-    padding-top: 2rem;
+    width: 15rem;
+    padding-bottom: 0.5rem;
+}
+
+#myBtn{
+    color: white;
 }
 
 #infos {
@@ -82,32 +88,31 @@ p{
     font-family: 'Haettenschweiler', arial;
 }
 
-@media screen and (max-width: 959px) {
-    #titre, #paragraphe{
-        margin-left: 2rem;
+@media screen and (min-width: 576px) and (max-width: 991px){
+    .container-fluid{
+        width: 89%;
+        margin-left: 10%;
     }
 }
 
-@media screen and (min-width: 960px) {
-    .row-first{
-        margin-left: 5%;
-    }
-    .container-fluid{
-        margin-left: 5%;
-    }
+@media screen and (min-width: 992px) {
     #manu1{
         border-radius: 0 0 0 2vw;
     }
-}
-
-@media screen and (min-width: 576px) and (max-width: 959px){
-    .row-first{
-        margin-left: 20%;
+    .col-6{
+        background:transparent;
+        align-items: flex-start;
+    }
+    .infobar{
+        background-color: #231F20;
+        padding-right: 1rem;
+        padding-left: 1rem;
     }
     .container-fluid{
-        margin-left: 20%;
+        width: 96%;
     }
 }
+
 
 /* Fin Contenu */
 
