--- a/assets/css/style_accueil.css
+++ b/assets/css/style_accueil.css
@@ -61,17 +61,17 @@ p{
 }
 
 #pc1 {
-    width: 10rem;
+    width: 8rem;
     height: auto;
 }
 
 #console1 {
-    width: 12rem;
+    width: 8rem;
     height: auto;
 }
 
 #tel1 {
-    width: 6rem;
+    width: 4rem;
     height: auto;
 }
 
@@ -88,10 +88,28 @@ p{
     font-family: 'Haettenschweiler', arial;
 }
 
+.container-fluid{
+    width: 90%;
+}
+
 @media screen and (min-width: 576px) and (max-width: 991px){
     .container-fluid{
         width: 89%;
         margin-left: 10%;
+    }
+    #pc1 {
+        width: 9rem;
+        height: auto;
+    }
+    
+    #console1 {
+        width: 9rem;
+        height: auto;
+    }
+    
+    #tel1 {
+        width: 5rem;
+        height: auto;
     }
 }
 
@@ -110,6 +128,20 @@ p{
     }
     .container-fluid{
         width: 96%;
+    }
+    #pc1 {
+        width: 10rem;
+        height: auto;
+    }
+    
+    #console1 {
+        width: 12rem;
+        height: auto;
+    }
+    
+    #tel1 {
+        width: 8rem;
+        height: auto;
     }
 }
 
